# quote_bot

./: .gitignore  .gitmodules  CUSTOM_ATTRIBUTES.md  QuoteRenderer.sln  README.md  emoji_gen.py  mock_cmprsn.sh  mock_svg_data.sh
.run/: Run main.py.run.xml  Start.run.xml
QuoteRenderer/: QuoteRenderer.vcxproj  QuoteRenderer.vcxproj.filters  main.cpp  renderer.cpp  renderer.h  rounded_rect.cpp  rounded_rect.h
QuoteRenderer/helpers/: rounded_rect.cpp  rounded_rect.h
bot/: bot.py  config.py  formatter.py  main.py  redis_controller.py
bot/tests/: redis_queue_tests.py
infra/: .env.example  docker-compose.yml  prometheus.yml  test_font.py  test_font.xml
infra/core/: backtrace.txt
services/bot/: Dockerfile  bot.py  config.py  formatter.py  main.py  redis_controller.py  requirements.txt  util.py
services/bot/tests/: redis_queue_tests.py
services/generator/: .dockerignore  50-emoji.conf  CMakeLists.txt  Cargo.toml  Dockerfile  FORMAT.md  compressor.cpp  compressor.h  entrypoint.sh  exceptions.h  global.h  globals.h  image.capnp  image.capnp.c++  image.capnp.h  image.cpp  image.h  image_serializer.cpp  image_serializer.h  json_parser.cpp  json_parser.h  main.cpp  parser.cpp  parser.h  preprocessor.cpp  preprocessor.h  rasterizer.cpp  rasterizer.h  redis_queue.cpp  redis_queue.h  redis_reply.cpp  redis_reply.h  renderer.cpp  renderer.h  response.cpp  response.h  storage.cpp  storage.h  template_storage.cpp  template_storage.h  (+5 more)
services/generator/src/: compressor.rs  config.rs  layout.rs  main.rs  parser.rs  redis_queue.rs  renderer.rs  templater.rs  text.rs
services/generator/templates/: dark.tem  light.tem
services/generator/tests/: CMakeLists.txt  base64_tests.cpp  compressor_tests.cpp  encoder_tests.cpp  globals.h  img_serializer_tests.cpp  preproccessor_tests.cpp  redis_compressor_tests.cpp  redis_queue_tests.cpp  redis_tests.cpp  request_json_parser_tests.cpp  template_storage_tests.cpp
services/generator_r/: Cargo.toml  Dockerfile
services/generator_r/src/: main.rs
services/template_engine/: Dockerfile  FORMAT.md  config.py  main.py  redis_controller.py  requirements.txt  template_generator.py  tg_template.tem
