[package]
name = "generator_rs"
version = "0.1.1"
edition = "2024"

[dependencies]
base64 = "0.22.1"
image = { version = "0.25.10", features = ["webp"] }
parley = "0.10.0"
redis = { version = "1.2.4", features = ["tokio-comp"] }
tokio = { version = "1.52.3", features = ["full"] }
vello_svg = "0.9.0"
vello = { version = "0.7.0", features = ["wgpu"] }
zstd = "0.13.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
thiserror = "2.0.18"
wgpu = "29.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
minijinja = "2.21.0"

[profile.release]
strip = true
lto = true
codegen-units = 1

